--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			<div>
 				<img class="u-max-full-width logotext" src="logotext.png" />
 			</div>
-			<p class="promo">We are an undergraduate-led organization and global initiative that disseminates, promotes, and advocates for people, tools, and research in fields of quantitative science including ecology, biology, neuroscience, and engineering.</p>
+			<p class="promo"></p>
 			<!--<p><a href="https://www.instagram.com/quantgeo/"><img class="icon" src="instagram.png" /></a></p>-->
 			<p><a class="button" href="mailto:info@neurospacefield.org">info@neurospacefield.org</a></p>
 		</div>
