--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			</div>
 			<div class="break">
 				<h1>The Podcast</h1>
-				<p class="promo">Welcome to the <strong>Neuro Space and Field Lab Podcast</strong> where I discuss the latest research from extreme performing animals here on Earth and we might apply those insights, tactics, and strategies to the austere environments humans explore.</p>
+				<p class="promo">Welcome to the <strong>Neuro Space and Field Lab Podcast</strong> where I discuss the latest research from extreme performing animals here on Earth and how we might apply those insights, tactics, and strategies to the austere environments humans explore.</p>
 			</div>
 			<!--<p><a href="https://www.instagram.com/quantgeo/"><img class="icon" src="instagram.png" /></a></p>-->
 			<p><a class="button" href="http://gaidi.ca">Matt Gaidica, Ph.D.</a><a class="button" href="mailto:info@neurospacefield.org">info@neurospacefield.org</a></p>
